--- a/templates/repository/deployments.twig
+++ b/templates/repository/deployments.twig
@@ -12,7 +12,7 @@
         Deployment targets define what servers your application can be deployed to and where on that server the code will be uploaded.
     </p>
 
-    {% set canEdit = isUserRepoAdmin(currentUser, repository.key) %}
+    {% set canEdit = isUserAdminOrSuper(currentUser) or isUserLeadOf(currentUser, repository) %}
 
     {% if environments %}
 
@@ -73,7 +73,7 @@
     {% else %}
         <p>
             There are no environments.
-            {% if isUserAdmin(currentUser) %}
+            {% if isUserSuper(currentUser) %}
                 <br><a href="{{ urlFor('environment.admin.add') }}">Add an environment</a>
             {% endif %}
         </p>
