--- a/templates/user/users.twig
+++ b/templates/user/users.twig
@@ -3,12 +3,14 @@
 
 {% set page_title = "Users" %}
 
+{% set isAdmin = isUserAdminOrSuper(currentUser) %}
+
 {% block content %}
     <h1>{{ page_title }}</h1>
 
-    {{ page_macros.userTable(users, true) }}
+    {{ page_macros.userTable(users, true, isAdmin) }}
 
-    {% if isUserAdmin(currentUser) and inactiveUsers %}
+    {% if isAdmin and inactiveUsers %}
         <h2>Inactive Users</h2>
         {{ page_macros.userTable(inactiveUsers, false) }}
     {% endif %}
@@ -18,62 +20,69 @@
 
 {% endblock %}
 
-{% macro userTable(users, showtypes) %}
+{% macro userTable(users, showTypes, isAdmin) %}
     {% import "_partial/macros.twig" as macros %}
 
-    <table class="table--spacing-medium table--striped" data-tablesaw-mode="stack">
-        <thead>
-            <tr>
-                <th>User ID</th>
-                <th>Username</th>
-                <th>Name</th>
-                <th>E-mail</th>
-                {% if showtypes %}
-                    <th></th>
-                {% endif %}
-            </tr>
-        </thead>
-        <tbody>
-        {% for user in users %}
-            {% set user_types = user.type %}
-            {% set user = user.user %}
-
-            <tr>
-                <td><a href="{{ urlFor('user', {'user': user.id}) }}">{{ user.id }}</a></td>
-                <td>{{ user.handle }}</td>
-                <td>
-                    {% if isSeriousBusinessMode() %}
-                        {{ user.name }}
-                    {% else %}
-                        {{ getUsersActualName(user) }}
+    {% if users %}
+        <table class="table--spacing-medium table--striped" data-tablesaw-mode="stack">
+            <thead>
+                <tr>
+                    <th>User ID</th>
+                    <th>Username</th>
+                    <th>Name</th>
+                    <th>E-mail</th>
+                    {% if showtypes %}
+                        <th></th>
                     {% endif %}
-                </td>
-                <td>{{ user.email }}</td>
+                </tr>
+            </thead>
+            <tbody>
+            {% for user in users %}
+                {% set user_types = user.type %}
+                {% set user = user.user %}
 
-                {% if showtypes %}
-                    <td class="tr">
-                        {% if user_types.hasType %}
-                            <ul class="inline-list--space">
-                                {% if user_types.isLead %}
-                                    <li>{{ macros.status('Lead', 'info') }}</li>
-                                {% endif %}
-                                {% if user_types.isButtonPusher %}
-                                    <li>{{ macros.status('Admin', 'warning') }}</li>
-                                {% endif %}
-                                {% if user_types.isSuper %}
-                                    <li>{{ macros.status('Super', 'error') }}</li>
-                                {% endif %}
-                            </ul>
+                <tr>
+                    <td><a href="{{ urlFor('user', {'user': user.id}) }}">{{ user.id }}</a></td>
+                    <td>{{ user.handle }}</td>
+                    <td>
+                        {% if isSeriousBusinessMode() %}
+                            {{ user.name }}
+                        {% else %}
+                            {{ getUsersActualName(user) }}
                         {% endif %}
                     </td>
-                {% endif %}
+                    <td>{{ user.email }}</td>
 
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="4">There are no users.</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+                    {% if showTypes %}
+                        <td class="tr">
+                            {% if user_types.hasType %}
+                                <ul class="inline-list--space">
+                                    {% if user_types.isLead %}
+                                        <li>{{ macros.status('Lead', 'notice') }}</li>
+                                    {% endif %}
+                                    {% if user_types.isButtonPusher %}
+                                        <li>{{ macros.status('Admin', 'warning') }}</li>
+                                    {% endif %}
+                                    {% if user_types.isSuper %}
+                                        <li>{{ macros.status('Super', 'error') }}</li>
+                                    {% endif %}
+
+                                    {% if isAdmin %}
+                                        <li><a href="{{ urlFor('admin.permissions.add', {user: user.id }) }}">{{ macros.icon('add') }} Permission</a></li>
+                                    {% endif %}
+                                </ul>
+                            {% elseif isAdmin %}
+                                <a href="{{ urlFor('admin.permissions.add', {user: user.id }) }}">{{ macros.icon('add') }} Permission</a>
+                            {% endif %}
+                        </td>
+                    {% endif %}
+
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+
+    {% else %}
+        <p>There are no users.</p>
+    {% endif %}
 {% endmacro %}
