--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -57,7 +57,7 @@
             <script src="/js/vendor.bundle.js?v={{ buster }}"></script>
             <script src="/js/app.js?v={{ buster }}"></script>
 
-            {% if showAnalytics(currentUser) %}
+            {% if applicationEnvironment == 'prod' %}
                 <script>
                     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
