Remove environment order

--- a/templates/environment/environments.twig
+++ b/templates/environment/environments.twig
@@ -18,7 +18,7 @@
                 {% for environment in envs %}
                     <tr>
                         <td>
-                            {% if environment.key == 'prod' %}
+                            {% if environment.isProduction %}
                                 {{ macros.status(environment.key, 'info', 'key') }}
                             {% else %}
                                 {{ environment.key }}
