Add deployment permission management

--- a/sass/_scales.scss
+++ b/sass/_scales.scss
@@ -13,7 +13,7 @@
 // @import "../bower_components/scales-patterns-horizontal-list/horizontal-list";
 @import "../bower_components/scales-patterns-vertical-list/vertical-list";
 // @import "../bower_components/scales-patterns-media-object/media-object";
-// @import "../bower_components/scales-patterns-flag/flag";
+@import "../bower_components/scales-patterns-flag/flag";
 @import "../bower_components/scales-patterns-buttons/buttons";
 @import "../bower_components/scales-patterns-split/split";
 // @import "../bower_components/scales-patterns-stats/stats";
