--- a/templates/environment/environments.twig
+++ b/templates/environment/environments.twig
@@ -25,7 +25,7 @@
                             {% endif %}
                         </td>
                         <td class="tr">
-                            <a href="{{ urlFor('environment', {'id': env.id}) }}">View</a>
+                            <a href="{{ urlFor('environment', {'id': environment.id}) }}">View</a>
                         </td>
                     </tr>
                 {% endfor %}
