--- a/templates/environment/environment.twig
+++ b/templates/environment/environment.twig
@@ -10,6 +10,9 @@
     <h3>Name</h3>
     <p>{{ env.key }}</p>
 
+    <h3>Is Production Environment?</h3>
+    <p>{{ env.isProduction ? 'Yes' : 'No' }}</p>
+
     <h3>Servers</h3>
     {% if servers %}
         <table class="table--spacing-medium table--striped" data-tablesaw-mode="stack">
