--- a/templates/repository/repositories.twig
+++ b/templates/repository/repositories.twig
@@ -10,7 +10,7 @@
         <thead>
             <tr>
                 <th>Application</th>
-                <th>Github Source</th>
+                <th>GitHub Source</th>
                 <th class="t5"></th>
             </tr>
         </thead>
